--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,16 +23,17 @@ body {
   @apply text-4xl text-center mb-6 text-white;
 }
 
-.inside--title {
+.title {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  color: var(--purple);
-  @apply text-4xl text-center mb-6;
-}
+  background: -webkit-linear-gradient(left, var(--purple), rgba(48,67,100,1));
+  background: -o-linear-gradient(right, var(--purple), rgba(48,67,100,1));
+  background: -moz-linear-gradient(right, var(--purple), rgba(48,67,100,1));
+  background: linear-gradient(to right, var(--purple), rgba(48,67,100,1)); 
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 
-.container {
-  margin: 0 auto;
-  padding: 0 5rem
+  @apply container mx-auto px-5 text-4xl text-center mb-6;
 }
 
 .collapse-section {
@@ -57,8 +58,32 @@ body {
   @apply pt-24 pb-32;
 }
 
+/* Collapse settings */
+
+.collapse-section {
+  @apply container mx-auto px-5;
+}
+
 .collapse-title {
   color: var(--purple);
   font-size: 1.5rem;
   @apply flex items-center justify-center w-full py-7 px-10 font-medium rounded-lg my-8 bg-white;
+}
+
+.testimonial-cards {
+  @apply container mx-auto px-5 flex flex-col md:grid md:grid-cols-2 gap-4;
+}
+
+.testimonial-card {
+  background-color: var(--purple);
+  min-height: 350px;
+  @apply flex-auto block p-6 rounded-lg border border-gray-200 shadow-md;
+
+  h5 {
+    @apply mb-2 text-2xl font-bold tracking-tight text-white dark:text-white
+  }
+
+  p {
+    @apply font-normal text-gray-300 dark:text-gray-400;
+  }
 }
