--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,7 +20,12 @@ body {
 
 .white-title {
   font-weight: 700;
-  @apply text-4xl text-center mb-6 text-white;
+  @apply text-3xl text-center text-white;
+}
+
+.white-subtitle {
+  font-weight: 400;
+  @apply text-2xl text-center text-white;
 }
 
 .title {
@@ -34,6 +39,14 @@ body {
   -webkit-text-fill-color: transparent;
 
   @apply container mx-auto px-5 text-4xl text-center mb-6;
+}
+
+.subscribe {
+  display: inline-block;
+  background-color: var(--green);
+  color: var(--purple);
+  max-width: fit-content;
+  @apply px-10 py-5 rounded-md uppercase font-medium;
 }
 
 .collapse-section {
@@ -52,6 +65,12 @@ body {
   @apply pt-24 pb-44;
 }
 
+.inside {
+  &--accordion-expanded {
+    @apply p-5 font-light border border-gray-200 dark:border-gray-700 dark:bg-gray-900;
+  }
+}
+
 #questions {
   background: rgb(82,61,127);
   background: linear-gradient(90deg, rgba(82,61,127,1) 0%, rgba(82,61,127,1) 30%, rgba(48,67,100,1) 100%);
@@ -66,24 +85,87 @@ body {
 
 .collapse-title {
   color: var(--purple);
-  font-size: 1.5rem;
-  @apply flex items-center justify-center w-full py-7 px-10 font-medium rounded-lg my-8 bg-white;
+  @apply flex items-center justify-center w-full py-4 md:py-7 px-10 font-medium rounded-lg my-4 md:my-8 bg-white text-sm md:text-2xl;
 }
 
-.testimonial-cards {
-  @apply container mx-auto px-5 flex flex-col md:grid md:grid-cols-2 gap-4;
+.middle-section-wrapper {
+  background-attachment: fixed;
+  @apply bg-first;
 }
 
-.testimonial-card {
-  background-color: var(--purple);
-  min-height: 350px;
-  @apply flex-auto block p-6 rounded-lg border border-gray-200 shadow-md;
+/* Testimonials */
 
-  h5 {
-    @apply mb-2 text-2xl font-bold tracking-tight text-white dark:text-white
+.testimonial {
+  padding: 2rem 0;
+
+  &--cards {
+    @apply container mx-auto px-5 flex flex-col md:grid md:grid-cols-2 gap-4;
   }
 
-  p {
-    @apply font-normal text-gray-300 dark:text-gray-400;
+  &--card {
+    background-color: var(--purple);
+    min-height: 350px;
+    @apply flex-auto block p-6 rounded-lg border border-gray-200 shadow-md;
+  
+    h5 {
+      @apply mb-2 text-2xl font-bold tracking-tight text-white dark:text-white
+    }
+  
+    p {
+      @apply font-normal text-gray-300 dark:text-gray-400;
+    }
+  }
+}
+
+/* Why this Course */
+
+.why {
+  @apply flex flex-col justify-center align-middle pt-14;
+  background: linear-gradient(90deg, rgba(21, 6, 54, 0.5) 0%, rgba(82,61,127,0.5) 30%, rgba(3, 15, 34, 0.5) 100%);
+
+  &--description {
+    background: rgb(82,61,127);
+    background: linear-gradient(90deg, rgba(82,61,127,0.6) 8%, rgba(82,61,127,1) 48%, rgba(67,77,120,0.3085609243697479) 100%);
+    -webkit-backdrop-filter: blur(1px);
+    backdrop-filter: blur(1px);
+    @apply container mx-auto xl:px-56 py-10 mt-5 text-white;
+
+    p {
+      @apply p-12 text-center rounded-sm;
+    }
+
+    b {
+      @apply text-xl font-medium;
+    }
+  }
+}
+
+
+.about {
+  &--section {
+    background-repeat: no-repeat;
+    background-size: cover;
+    @apply bg-about py-10;
+  }
+
+  &--wrapper {
+    @apply flex flex-row items-center gap-12;
+  }
+
+  &--logo {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    @apply py-56;
+  }
+
+  &--description {
+    height: 100%;
+    @apply flex flex-col align-middle;
+
+    p {
+      color: var(--purple);
+      @apply text-xl mb-4;
+    }
   }
 }
