--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+$c: rgb(221, 237, 157);
+
 body {
   font-family: 'Poppins', sans-serif;
   background-attachment: fixed;
@@ -29,7 +31,6 @@ body {
 }
 
 .white-title {
-  font-weight: 700;
   @apply text-3xl text-center text-white;
 }
 
@@ -56,7 +57,17 @@ body {
   background-color: var(--green);
   color: var(--purple);
   max-width: fit-content;
+  cursor: pointer;
+	transition: 0.25s ease;
   @apply px-10 py-5 rounded-md uppercase font-medium;
+
+  &:hover {
+    box-shadow: 
+      0 5px 5px -5px rgba($c, 0.15),
+      0 10px 10px -5px rgba($c, 0.15),
+      0 15px 15px -5px rgba($c, 0.15),
+      0 20px 20px -5px rgba($c, 0.15);
+  }
 }
 
 .collapse-section {
@@ -192,7 +203,7 @@ body {
 
 .header {
   &--section {
-    @apply py-10;
+    @apply pt-10 pb-48;
   }
 
   &--wrapper {
@@ -281,10 +292,39 @@ body {
 
 .practice {
   @apply flex flex-col;
-  color: var(--purple);
   
   p {
     width: 100%;
     @apply text-xl;
+  }
+}
+
+.swiper {
+  padding-bottom: 2rem!important;
+}
+
+.swiper-pagination {
+  bottom: 0!important;
+}
+
+.course {
+  &--section {
+    -webkit-box-shadow: 0px -70px 37px 35px #523d7f;
+    box-shadow: 0px -70px 37px 35px #523d7f;
+    background-image: url('/bg-version.png'), linear-gradient(0deg, rgba(67,77,120,1) 0%, rgba(82,61,127,1) 50%, rgba(82,61,127,1) 80%, rgba(82,61,127,1) 100%);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    @apply pb-28;
+  }
+
+  &--box-wrapper {
+    @apply flex flex-col gap-4 mt-16;
+  }
+
+  &--box {
+    width: 100%;
+    max-width: 900px;
+    background-image: linear-gradient(#4e3f7c, #37496a);
+    @apply text-white text-xl p-8 relative rounded-lg;
   }
 }
