--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -199,7 +199,11 @@ body {
   }
 
   &--wrapper {
-    @apply flex flex-row items-center gap-12 text-center;
+    @apply container mx-auto flex flex-col lg:flex-row items-center lg:gap-12 text-center;
+
+    .about--logo {
+      @apply pb-0 lg:py-[14rem] px-4 lg:px-0 max-w-[400px] lg:max-w-[800px];
+    }
   }
 }
 
