--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -169,14 +169,13 @@ body {
   }
 
   &--wrapper {
-    @apply flex flex-row items-center gap-12;
+    @apply flex flex-col lg:flex-row items-center lg:gap-12 px-8;
   }
 
   &--logo {
     position: relative;
     width: 100%;
-    max-width: 800px;
-    @apply py-56;
+    @apply pt-56 lg:py-56 max-w-[400px] lg:max-w-[800px];
   }
 
   &--description {
@@ -199,7 +198,7 @@ body {
   }
 
   &--wrapper {
-    @apply container mx-auto flex flex-col lg:flex-row items-center lg:gap-12 text-center;
+    @apply container mx-auto flex flex-col lg:flex-row items-center lg:gap-12 text-center px-8;
 
     .about--logo {
       @apply pb-0 lg:py-[14rem] px-4 lg:px-0 max-w-[400px] lg:max-w-[800px];
