--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -139,8 +139,11 @@ body {
 /* Why this Course */
 
 .why {
+  background: rgb(82,61,127);
+  background-image: url('/bg-1.png'), linear-gradient(90deg, rgba(82,61,127,1) 0%, rgba(82,61,127,1) 30%, rgba(48,67,100,1) 100%);
+  background-repeat: no-repeat;
+  background-position: bottom;
   @apply flex flex-col justify-center align-middle pt-14;
-  background: linear-gradient(90deg, rgba(21, 6, 54, 0.5) 0%, rgba(82,61,127,0.5) 30%, rgba(3, 15, 34, 0.5) 100%);
 
   &--description {
     background: rgb(82,61,127);
@@ -320,7 +323,7 @@ body {
     background-repeat: no-repeat;
     background-position: bottom;
     overflow: hidden;
-    @apply pb-28;
+    @apply pb-[7rem] lg:pb-[20rem] relative;
   }
 
   &--box-wrapper {
@@ -329,16 +332,32 @@ body {
   }
 }
 
+.course--section::after {
+  content: "";
+  position: absolute;
+  width: 100vw;
+  background-image: url('/lacos.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  @apply h-[51px] lg:h-[214px];
+}
+
 .course--box {
   position: relative;
   width: 100%;
   max-width: 900px;
   background-image: linear-gradient(#4e3f7c, #37496a);
   color: #fff;
-  padding: 2rem;
   font-size: 1.25rem;
   line-height: 1.75rem;
   border-radius: 0.5rem;
+}
+
+.text--wrapper {
+  @apply p-12;
 }
 
 .even::after {
@@ -371,4 +390,60 @@ body {
   p {
     @apply md:text-xl mb-4;
   }
+}
+
+.course-card-even::before {
+  content: url('/course-icons/icon-1.png');
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 20px;
+  left: -80px;
+  z-index: 1000;
+}
+
+.course-card-odd::before {
+  content: url('/course-icons/icon-1.png');
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 0;
+  right: 60px;
+  z-index: 1000;
+}
+
+.course-card-even > .text--wrapper {
+  padding-left: 6rem;
+}
+
+.course-card-odd > .text--wrapper {
+  padding-right: 6rem;
+}
+
+.course-card-1::before {
+  content: url('/course-icons/icon-1.png');
+}
+
+.course-card-2::before {
+  content: url('/course-icons/icon-2.png');
+  top: 25px;
+}
+
+.course-card-3::before {
+  content: url('/course-icons/icon-3.png');
+  top: 10px
+}
+
+.course-card-4::before {
+  content: url('/course-icons/icon-4.png');
+  top: 50px
+}
+
+.course-card-5::before {
+  content: url('/course-icons/icon-5.png');
+}
+
+.course-card-6::before {
+  content: url('/course-icons/icon-6.png');
+  top: 5px;
 }
