--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -140,7 +140,7 @@ body {
 
 .why {
   background: rgb(82,61,127);
-  background-image: url('/bg-1.png'), linear-gradient(90deg, rgba(82,61,127,1) 0%, rgba(82,61,127,1) 30%, rgba(48,67,100,1) 100%);
+  background-image: url('/images/bg-1.png'), linear-gradient(90deg, rgba(82,61,127,1) 0%, rgba(82,61,127,1) 30%, rgba(48,67,100,1) 100%);
   background-repeat: no-repeat;
   background-position: bottom;
   @apply flex flex-col justify-center align-middle pt-14;
@@ -247,7 +247,7 @@ body {
 .version {
   &--section {
     background: rgb(82,61,127);
-    background-image: url('/bg-version.png'), linear-gradient(90deg, rgba(82,61,127,1) 0%, rgba(82,61,127,1) 30%, rgba(48,67,100,1) 100%);
+    background-image: url('/images/bg-version.png'), linear-gradient(90deg, rgba(82,61,127,1) 0%, rgba(82,61,127,1) 30%, rgba(48,67,100,1) 100%);
     background-repeat: no-repeat;
     background-position: bottom;
     @apply py-28;
@@ -319,7 +319,7 @@ body {
   &--section {
     -webkit-box-shadow: 0px -70px 37px 35px #523d7f;
     box-shadow: 0px -70px 37px 35px #523d7f;
-    background-image: url('/bg-version.png'), linear-gradient(0deg, rgba(67,77,120,1) 0%, rgba(82,61,127,1) 50%, rgba(82,61,127,1) 80%, rgba(82,61,127,1) 100%);
+    background-image: url('/images/bg-version.png'), linear-gradient(0deg, rgba(67,77,120,1) 0%, rgba(82,61,127,1) 50%, rgba(82,61,127,1) 80%, rgba(82,61,127,1) 100%);
     background-repeat: no-repeat;
     background-position: bottom;
     overflow: hidden;
@@ -336,7 +336,7 @@ body {
   content: "";
   position: absolute;
   width: 100vw;
-  background-image: url('/lacos.png');
+  background-image: url('/images/lacos.png');
   background-repeat: no-repeat;
   background-size: contain;
   bottom: 0;
@@ -393,7 +393,7 @@ body {
 }
 
 .course-card-even::before {
-  content: url('/course-icons/icon-1.png');
+  content: url('/images/course-icons/icon-1.png');
   position: absolute;
   width: 40px;
   height: 40px;
@@ -403,7 +403,7 @@ body {
 }
 
 .course-card-odd::before {
-  content: url('/course-icons/icon-1.png');
+  content: url('/images/course-icons/icon-1.png');
   position: absolute;
   width: 40px;
   height: 40px;
@@ -421,29 +421,29 @@ body {
 }
 
 .course-card-1::before {
-  content: url('/course-icons/icon-1.png');
+  content: url('/images/course-icons/icon-1.png');
 }
 
 .course-card-2::before {
-  content: url('/course-icons/icon-2.png');
+  content: url('/images/course-icons/icon-2.png');
   top: 25px;
 }
 
 .course-card-3::before {
-  content: url('/course-icons/icon-3.png');
+  content: url('/images/course-icons/icon-3.png');
   top: 10px
 }
 
 .course-card-4::before {
-  content: url('/course-icons/icon-4.png');
+  content: url('/images/course-icons/icon-4.png');
   top: 50px
 }
 
 .course-card-5::before {
-  content: url('/course-icons/icon-5.png');
+  content: url('/images/course-icons/icon-5.png');
 }
 
 .course-card-6::before {
-  content: url('/course-icons/icon-6.png');
+  content: url('/images/course-icons/icon-6.png');
   top: 5px;
 }
